--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,7 +1,9 @@
 live_config_reload = true
 
 import = [
-  "~/.config/alacritty/profile.toml"
+  "~/.config/alacritty/before.toml",
+  "~/.config/alacritty/theme.toml",
+  "~/.config/alacritty/font.toml",
 ]
 
 [env]
@@ -9,22 +11,19 @@ TERM_PROGRAM = 'Alacritty'
 
 [window]
 padding = { x = 0, y = 0 }
+position = { x = 0, y = 0 }
+dimensions = { columns = 134, lines = 100 }
 dynamic_padding = true
 decorations = "None"
 
+[font]
+size = 12
+
 [selection]
 save_to_clipboard = true
-
-[font]
-size = 13
 
 [keyboard]
 bindings = [
   { key = "F11", action = "ToggleFullscreen" },
   { key = "Insert", mods = "Shift", action = "Paste" },
 ]
-
-[bell]
-  animation = "Ease"
-  duration = 100
-  color = "#1a1b26"
