--- a/tmux.conf
+++ b/tmux.conf
@@ -48,4 +48,4 @@ bind-key -r | split-window -h -c "#{pane_current_path}"
 bind-key C-a send-prefix
 bind-key c new-window -c "#{pane_current_path}"
 
-run-shell "tmux-apply-colorscheme Solarized Dark"
+run-shell "tmux-apply-colorscheme"
