--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
 live_config_reload = true
 
 import = [
-  "~/.config/alacritty/before.toml",
+  "~/.config/alacritty/defaults.toml",
   "~/.config/alacritty/theme.toml",
   "~/.config/alacritty/font.toml",
 ]
@@ -15,9 +15,6 @@ position = { x = 0, y = 0 }
 dimensions = { columns = 134, lines = 100 }
 dynamic_padding = true
 decorations = "None"
-
-[font]
-size = 12
 
 [selection]
 save_to_clipboard = true
