--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,6 @@ set -g default-terminal "tmux-256color"
 set -g focus-events on
 set -g history-limit 5000
 set -g mouse on
-set -g pane-active-border-style "fg=default default"
-set -g pane-border-style "fg=default default"
 set -g prefix C-a
 set -g prefix2 C-Space
 set -g renumber-windows on
@@ -19,8 +17,6 @@ set -sg escape-time 1
 setw -g mode-keys vi
 setw -g monitor-activity on
 setw -g pane-base-index 1
-setw -g window-status-current-style "fg=default bg=default bright"
-setw -g window-status-style "dim italics"
 
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
@@ -36,16 +32,16 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 bind-key -r H resize-pane -L 10
 bind-key -r I run-shell 'tmux-irb #{pane_current_path}'
-bind-key -r N run-shell 'tmux-node #{pane_current_path}'
-bind-key -r S run-shell 'tmux-scratch #{pane_current_path}'
 bind-key -r J resize-pane -D 10
 bind-key -r K resize-pane -U 10
 bind-key -r L resize-pane -R 10
 bind-key -r M-k clear-history
 bind-key -r M-l send-keys "C-l"
+bind-key -r N run-shell 'tmux-node #{pane_current_path}'
 bind-key -r P run-shell 'tmux-psql #{pane_current_path}'
+bind-key -r S run-shell 'tmux-scratch #{pane_current_path}'
 bind-key -r | split-window -h -c "#{pane_current_path}"
 bind-key C-a send-prefix
 bind-key c new-window -c "#{pane_current_path}"
 
-run-shell "tmux-apply-colorscheme"
+source-file ~/.tmux/colors/colors.conf
