Use asdf-vm instead of nvm
As fast as lazy-loaded nvm, but actually works in all instances

--- a/.gitmodules
+++ b/.gitmodules
@@ -132,3 +132,6 @@
 	path = config/alacritty/alacritty-theme
 	url = git@github.com:alacritty/alacritty-theme.git
 	ignore = dirty
+[submodule "lib/asdf"]
+	path = lib/asdf
+	url = https://github.com/asdf-vm/asdf.git
