Add config for Kitty terminal program

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-vim/.netrwhist
-tags
-tmux/resurrect
-tags-*
 bin/monotonic-clock
-config/nvim.reentim/lazy-lock.json
-config/nvim.chad/lazy-lock.json
-config/alacritty/theme.toml
 config/alacritty/font.toml
+config/alacritty/theme.toml
+config/kitty/current-theme.conf
+config/kitty/theme.conf*
+config/kitty/font.conf
+config/nvim.chad/lazy-lock.json
+config/nvim.reentim/lazy-lock.json
+tags
+tags-*
 tmux/colors/theme.conf
+tmux/resurrect
+vim/.netrwhist
