--- a/tmux/colors/colors.conf
+++ b/tmux/colors/colors.conf
@@ -1,8 +1,3 @@
 source-file ~/.tmux/colors/reset.conf
-
-set -g pane-active-border-style "fg=default default"
-set -g pane-border-style "fg=default default"
-setw -g window-status-current-style "fg=default bg=default bright"
-setw -g window-status-style "dim italics"
-
+source-file ~/.tmux/colors/default.conf
 source-file ~/.tmux/colors/theme.conf
