--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,7 @@ bind-key -n C-h run-shell 'tmux-vim-select-pane -L'
 bind-key -n C-j run-shell 'tmux-vim-select-pane -D'
 bind-key -n C-k run-shell 'tmux-vim-select-pane -U'
 bind-key -n C-l run-shell 'tmux-vim-select-pane -R'
-bind-key -n M-k clear-history
+bind-key -n M-k send-keys "C-k"
 bind-key -n M-l send-keys "C-l"
 bind-key -n M-r source-file ~/.tmux.conf
 bind-key -r C-h select-window -t :-
