--- a/tmux.conf
+++ b/tmux.conf
@@ -28,6 +28,10 @@ bind-key -n C-l run-shell 'tmux-vim-select-pane -R'
 bind-key -n M-k send-keys "C-k"
 bind-key -n M-l send-keys "C-l"
 bind-key -n M-r source-file ~/.tmux.conf
+bind-key -r C-S-h resize-pane -L 1
+bind-key -r C-S-j resize-pane -D 1
+bind-key -r C-S-k resize-pane -U 1
+bind-key -r C-S-l resize-pane -R 1
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 bind-key -r H resize-pane -L 10
