--- a/tmux/colors/reset.conf
+++ b/tmux/colors/reset.conf
@@ -4,3 +4,4 @@ set -ug status-style
 setw -ug menu-selected-style
 setw -ug window-status-current-style
 setw -ug window-status-style
+setw -ug window-status-activity-style
