--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -24,7 +24,7 @@ include font.conf
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-# font_size 11.0
+font_size 13.5
 
 #: Font size (in pts).
 
@@ -161,7 +161,7 @@ include font.conf
 #: placed in the cell. For example::
 
 #:     modify_font cell_width 80%
-#:     modify_font cell_height -2px
+modify_font cell_height 8px
 #:     modify_font baseline 3
 
 #: Note that modifying the baseline will automatically adjust the
