--- a/tmux/colors/themes/tokyo_night.conf
+++ b/tmux/colors/themes/tokyo_night.conf
@@ -4,3 +4,4 @@ set -g status-style "fg=default"
 setw -g menu-selected-style "fg=default bg=default"
 setw -g window-status-current-style "fg=black bg=blue bright"
 setw -g window-status-style "dim italics"
+setw -g window-status-activity-style "fg=default bg=default"
