wip: Port Rakefile to Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-bin/monotonic-clock
+.packages-updated-stamp
 bin/asdf
+bin/monotonic-clock
 config/kitty/current-theme.conf
-config/kitty/theme.conf*
 config/kitty/font.conf
-config/nvim.chad/lazy-lock.json
-config/nvim.reentim/lazy-lock.json
-config/nvim.reentim/after/ftplugin
+config/kitty/theme.conf*
 config/nvim
+config/nvim.chad/lazy-lock.json
+config/nvim.reentim/after/ftplugin
+config/nvim.reentim/lazy-lock.json
 tags
 tags-*
 tmux/colors/theme.conf
