--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,7 +22,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highres,auto,1
+monitor=,highrr,auto,1.5
 
 
 ###################
@@ -34,23 +34,19 @@ monitor=,highres,auto,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = fuzzel
 $browser = firefox-developer-edition
+$wallpaper = ~/Pictures/wallpaper/Tokyo_Metro_and_JR_East_at_Ochanomizu,_Tokyo.jpg
 
 
 #################
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = $terminal & firefox-developer-edition
-exec-once = swaybg -i ~/Pictures/wallpaper/Tokyo_Metro_and_JR_East_at_Ochanomizu,_Tokyo.jpg -m fill
-exec-once = gsettings set org.gnome.desktop.interface gtk-theme Adwaita
+exec-once = systemctl --user enable --now hypridle.service
+exec-once = hyprpaper
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -58,6 +54,12 @@ exec-once = gsettings set org.gnome.desktop.interface gtk-theme Adwaita
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
+
+# need to these both on and off
+env = __GL_GSYNC_ALLOWED,1
+env = __GL_VRR_ALLOWED,0
+env = WLR_DRM_NO_ATOMIC,1
+env = __GL_MaxFramesAllowed,1
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
@@ -73,13 +75,13 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 5
+    gaps_in = 4
+    gaps_out = 4
 
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(22ffffff) rgba(ff22ccaa) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -88,7 +90,7 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = dwindle
+    layout = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -110,8 +112,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 4
+        passes = 2
 
         vibrancy = 0.1696
     }
@@ -165,7 +167,7 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+    new_status = slave
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -188,7 +190,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 # -1.0 - 1.0, 0 means no Modification.
 
     repeat_delay = 400
     repeat_rate = 50
@@ -208,13 +210,6 @@ gestures {
     workspace_swipe = false
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
-
 
 ###################
 ### KEYBINDINGS ###
@@ -225,15 +220,18 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
+# bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, S, exec, steam
+# bind = $mainMod, S, exec, steam
+bind = $mainMod, T, layoutmsg, swapwithmaster
+bind = $mainMod, M, layoutmsg, focusmaster
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -266,7 +264,7 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
@@ -278,8 +276,8 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 1%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
@@ -291,11 +289,17 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# bind = ALT, Tab, cyclenext
-# bind = ALT SHIFT, Tab, cyclenext, prev
-# bind = $mainMod, Tab, workspace, prev
-bind = ALT, Tab, workspace, prev
+# bind = $mainMod, L, workspace, prev
+bind = $mainMod, L, layoutmsg, togglefloating
+bind = ALT, Tab, workspace, m+1
+bind = ALT SHIFT, Tab, workspace, m-1
 bind = CTRL, grave, exec, $terminal
+bind = $mainMod SHIFT, right, movetoworkspace, e+1
+bind = $mainMod, F, fullscreen
+# bind = $mainMod, H, workspace, prev
+# bind = $mainMod, L, workspace, next
+bind = $mainMod SHIFT, Q, killactive
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -312,3 +316,7 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+xwayland {
+  force_zero_scaling = true
+}
