--- a/tmux.conf
+++ b/tmux.conf
@@ -44,6 +44,7 @@ bind-key -r M-l send-keys "C-l"
 bind-key -r N run-shell 'tmux-node #{pane_current_path}'
 bind-key -r P run-shell 'tmux-psql #{pane_current_path}'
 bind-key -r S run-shell 'tmux-scratch #{pane_current_path}'
+bind-key -r T run-shell 'tmux-todo #{pane_current_path}'
 bind-key -r | split-window -h -c "#{pane_current_path}"
 bind-key C-a send-prefix
 bind-key c new-window -c "#{pane_current_path}"
