--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -11,7 +11,7 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 11
+font_size 10.5
 
 #: Font size (in pts).
 
@@ -1368,7 +1368,7 @@ hide_window_decorations yes
 
 #: Advanced {{{
 
-shell env TERM_PROGRAM=Kitty $HOME/bin/tmux-auto
+shell env TERM_PROGRAM=Kitty zsh
 
 #: The shell program to execute. The default value of . means to use
 #: the value of of the SHELL environment variable or if unset,
