Ensure tmux run-shell has the correct PATH

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1368,7 +1368,7 @@ hide_window_decorations yes
 
 #: Advanced {{{
 
-shell env TERM_PROGRAM=Kitty zsh
+shell env TERM_PROGRAM=Kitty $HOME/bin/tmux-attach-or-new
 
 #: The shell program to execute. The default value of . means to use
 #: the value of of the SHELL environment variable or if unset,
