--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -15,9 +15,6 @@ font_size 10.5
 
 #: Font size (in pts).
 
-include theme.conf
-include font.conf
-
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. The easiest way to select fonts is to run the `kitten
 #: choose-fonts` command which will present a nice UI for you to
@@ -1368,7 +1365,7 @@ hide_window_decorations yes
 
 #: Advanced {{{
 
-shell env TERM_PROGRAM=Kitty $HOME/bin/tmux-attach-or-new
+shell env TERM_PROGRAM=Kitty "$HOME/bin/tmux-attach-or-new"
 
 #: The shell program to execute. The default value of . means to use
 #: the value of of the SHELL environment variable or if unset,
@@ -2601,3 +2598,7 @@ map f11 toggle_fullscreen
 #: }}}
 
 #: }}}
+
+include theme.conf
+include font.conf
+
