--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,7 +22,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highrr,auto,1.5
+monitor=,3840x2160@240.00Hz,auto,1.5
 
 
 ###################
@@ -33,19 +33,19 @@ monitor=,highrr,auto,1.5
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
 $menu = fuzzel
 $browser = firefox-developer-edition
-$wallpaper = ~/Pictures/wallpaper/Tokyo_Metro_and_JR_East_at_Ochanomizu,_Tokyo.jpg
 
 
 #################
 ### AUTOSTART ###
 #################
 
-exec-once = $terminal & firefox-developer-edition
 exec-once = systemctl --user enable --now hypridle.service
 exec-once = hyprpaper
+exec-once = randomise-wallpaper
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --primary --type text --watch cliphist store
 
 
 #############################
@@ -54,15 +54,10 @@ exec-once = hyprpaper
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
-
-# need to these both on and off
-env = __GL_GSYNC_ALLOWED,1
-env = __GL_VRR_ALLOWED,0
-env = WLR_DRM_NO_ATOMIC,1
-env = __GL_MaxFramesAllowed,1
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
+env = GTK_THEME,Adwaita:dark
+env = GTK2_RC_FILES,/usr/share/themes/Adwaita-dark/gtk-2.0/gtkrc
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORM=wayland
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
@@ -75,78 +70,78 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 4
-    gaps_out = 4
+  gaps_in = 4
+  gaps_out = 6
 
-    border_size = 2
+  border_size = 2
 
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(22ffffff) rgba(ff22ccaa) 45deg
-    col.inactive_border = rgba(595959aa)
+  # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
+  col.active_border = rgba(22ffff88) rgba(22ffff44) 90deg
+  col.inactive_border = rgba(595959aa)
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = true
+  # Set to true enable resizing windows by clicking and dragging on borders and gaps
+  resize_on_border = true
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+  # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+  allow_tearing = false
 
-    layout = master
+  layout = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
-    rounding_power = 3
+  rounding = 4
+  rounding_power = 3
 
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+  # Change transparency of focused and unfocused windows
+  active_opacity = 1.0
+  inactive_opacity = 1.0
 
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
+  shadow {
+    enabled = true
+    range = 12
+    render_power = 3
+    color = rgba(1a1a1a88)
+  }
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 4
-        passes = 2
+  # https://wiki.hyprland.org/Configuring/Variables/#blur
+  blur {
+    enabled = true
+    size = 4
+    passes = 1
 
-        vibrancy = 0.1696
-    }
+    vibrancy = 0.1696
+  }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+  enabled = yes, please :)
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+  # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
+  bezier = easeOutQuint,0.23,1,0.32,1
+  bezier = easeInOutCubic,0.65,0.05,0.36,1
+  bezier = linear,0,0,1,1
+  bezier = almostLinear,0.5,0.5,0.75,1.0
+  bezier = quick,0.15,0,0.1,1
 
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+  animation = global, 1, 10, default
+  animation = border, 1, 5.39, easeOutQuint
+  animation = windows, 1, 4.79, easeOutQuint
+  animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+  animation = windowsOut, 1, 1.49, linear, popin 87%
+  animation = fadeIn, 1, 1.73, almostLinear
+  animation = fadeOut, 1, 1.46, almostLinear
+  animation = fade, 1, 3.03, quick
+  animation = layers, 1, 3.81, easeOutQuint
+  animation = layersIn, 1, 4, easeOutQuint, fade
+  animation = layersOut, 1, 1.5, linear, fade
+  animation = fadeLayersIn, 1, 1.79, almostLinear
+  animation = fadeLayersOut, 1, 1.39, almostLinear
+  animation = workspaces, 1, 0.1, almostLinear, fade
+  animation = workspacesIn, 1, 0.1, almostLinear, fade
+  animation = workspacesOut, 1, 0.1, almostLinear, fade
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -161,19 +156,22 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+  pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+  preserve_split = true # You probably want this
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = slave
+  new_status = slave
+  mfact = 0.667
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+  force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+  disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+  vfr = false
+  vrr = 0
 }
 
 
@@ -183,31 +181,32 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options = ctrl:nocaps
+  kb_layout = us
+  kb_variant =
+  kb_model =
+  kb_options = ctrl:nocaps,altwin:swap_alt_win
+  # kb_options = ctrl:nocaps
 
-    follow_mouse = 1
+  follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no Modification.
+  sensitivity = 0 # -1.0 - 1.0, 0 means no Modification.
 
-    repeat_delay = 400
-    repeat_rate = 50
-    numlock_by_default = true
+  repeat_delay = 400
+  repeat_rate = 50
+  numlock_by_default = true
 
-    touchpad {
-        natural_scroll = false
-    }
+  touchpad {
+    natural_scroll = false
+  }
 
-    accel_profile = flat
-    force_no_accel = 1
-    sensitivity = 0
+  accel_profile = flat
+  force_no_accel = 1
+  sensitivity = 0
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+  workspace_swipe = false
 }
 
 
@@ -219,11 +218,7 @@ gestures {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-# bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod SHIFT, Q, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, XDG_CURRENT_DESKTOP=kde dolphin
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -231,7 +226,6 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 # bind = $mainMod, S, exec, steam
 bind = $mainMod, T, layoutmsg, swapwithmaster
-bind = $mainMod, M, layoutmsg, focusmaster
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -263,6 +257,18 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+bind = $mainMod ALT SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod ALT SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod ALT SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod ALT SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod ALT SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod ALT SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod ALT SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod ALT SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod ALT SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod ALT SHIFT, 0, movetoworkspacesilent, 10
+
+
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
@@ -280,8 +286,6 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctlrs 10%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -289,17 +293,28 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# bind = $mainMod, L, workspace, prev
-bind = $mainMod, L, layoutmsg, togglefloating
-bind = ALT, Tab, workspace, m+1
-bind = ALT SHIFT, Tab, workspace, m-1
-bind = CTRL, grave, exec, $terminal
+bind = $mainMod, L, workspace, focuscurrentorlast
+bind = $mainMod, Tab, workspace, m+1
+bind = $mainMod SHIFT, Tab, workspace, m-1
 bind = $mainMod SHIFT, right, movetoworkspace, e+1
 bind = $mainMod, F, fullscreen
 # bind = $mainMod, H, workspace, prev
 # bind = $mainMod, L, workspace, next
 bind = $mainMod SHIFT, Q, killactive
+bind = , PRINT, exec, grim ~/Pictures/Screenshots/Screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
 
+bind = $mainMod CTRL, S, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
+
+bind = $mainMod, Return, exec, kitty
+bind = CTRL, grave, exec, toggle-quake
+
+windowrulev2 = float, class:^(quake)$
+windowrulev2 = noborder, class:^(quake)$
+windowrulev2 = animation slideIn, class:^(quake)$
+windowrulev2 = rounding 0, class:^(quake)$
+windowrulev2 = opacity 0.90, class:^(quake)$
+windowrulev2 = size 100% 33%, class:^(quake)$
+windowrulev2 = move 0 0, class:^(quake)$
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -316,6 +331,9 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrulev2 = noanim, class:^(kitty)$
+windowrulev2 = opacity 1.25, class:^(kitty)$
 
 xwayland {
   force_zero_scaling = true
