--- a/tmux/colors/themes/catppuccin_macchiato.conf
+++ b/tmux/colors/themes/catppuccin_macchiato.conf
@@ -1,7 +1,6 @@
 set -g pane-active-border-style "fg=default"
-set -g pane-active-border-style "fg=#32344a"
+set -g pane-border-style "fg=default"
 set -g status-style "fg=default"
 setw -g menu-selected-style "fg=default bg=default"
-setw -g window-status-current-style "fg=black bg=blue bright"
+setw -g window-status-current-style "fg=white bg=blue bright"
 setw -g window-status-style "dim italics"
-setw -g window-status-activity-style "fg=default bg=default"
