--- a/config/sway/config
+++ b/config/sway/config
@@ -8,9 +8,6 @@ font pango:IBM Plex Mono Medium 11
 
 output eDP-1 scale 1.5
 
-exec --no-startup-id kitty
-exec --no-startup-id sleep 2 && firefox-developer-edition
-
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
@@ -19,12 +16,14 @@ exec --no-startup-id dex --autostart --environment i3
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
+workspace_layout tabbed
+
 bar {
   status_command i3status-rs
 }
 
 input * {
-  repeat_delay 200
+  repeat_delay 400
   repeat_rate 50
   xkb_options ctrl:nocaps
   tap enabled
@@ -98,7 +97,7 @@ bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $mod+space exec fuzzel
 
 # focus the parent container
 bindsym $mod+a focus parent
