Add extra kitty config for MacOS...
MacOS gets this in config/kitty/untracked.conf:

  shell env TERM_PROGRAM=Kitty /bin/zsh --login "$HOME/bin/tmux-attach-or-new"

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 .vagrant/
 bin/asdf
 bin/monotonic-clock
+config/btop/*.log
+config/hypr/hyprpaper.conf
 config/kitty/current-theme.conf
 config/kitty/font.conf
 config/kitty/theme.conf.bak
+config/kitty/untracked.conf
 config/nvim
 config/nvim.chad/lazy-lock.json
 config/nvim.reentim/after/ftplugin
 config/nvim.reentim/lazy-lock.json
-config/btop/*.log
-config/hypr/hyprpaper.conf
 tags
 tags-*
 tmux/colors/theme.conf
