--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1771,7 +1771,7 @@ shell_integration no-cursor
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
@@ -1812,7 +1812,8 @@ shell_integration no-cursor
 #: this option is obsolete (although still supported). Consider using
 #: text_composition_strategy instead.
 
-# macos_traditional_fullscreen no
+macos_traditional_fullscreen yes
+
 
 #: Use the macOS traditional full-screen transition, that is faster,
 #: but less pretty.
@@ -2603,3 +2604,4 @@ include theme.conf
 include fonts/font-default.conf
 include font.conf
 
+include untracked.conf
