Split up tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,52 +1,2 @@
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m' # italics
-set -g base-index 1
-set -g default-shell $SHELL
-set -g default-terminal "tmux-256color"
-set -g focus-events on
-set -g history-limit 5000
-set -g mouse on
-set -g prefix C-a
-set -g prefix2 C-Space
-set -g renumber-windows on
-set -g status-interval 1
-set -g status-left-length 30
-set -g status-right "#(tmux-git-info '#{pane_current_path}') %a %-d %b %R"
-set -g status-right-length 100
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM_PROGRAM TERM_PROFILE"
-set -sg escape-time 1
-setw -g mode-keys vi
-setw -g monitor-activity on
-setw -g pane-base-index 1
-
-bind-key % split-window -h -c "#{pane_current_path}"
-bind-key '"' split-window -c "#{pane_current_path}"
-bind-key -n 'C-\' resize-pane -Z
-bind-key -n C-h run-shell 'tmux-vim-select-pane -L'
-bind-key -n C-j run-shell 'tmux-vim-select-pane -D'
-bind-key -n C-k run-shell 'tmux-vim-select-pane -U'
-bind-key -n C-l run-shell 'tmux-vim-select-pane -R'
-bind-key -n M-k send-keys "C-k"
-bind-key -n M-l send-keys "C-l"
-bind-key -n M-r source-file ~/.tmux.conf
-bind-key -r C-S-h resize-pane -L 1
-bind-key -r C-S-j resize-pane -D 1
-bind-key -r C-S-k resize-pane -U 1
-bind-key -r C-S-l resize-pane -R 1
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-bind-key -r H resize-pane -L 10
-bind-key -r I run-shell 'tmux-irb #{pane_current_path}'
-bind-key -r J resize-pane -D 10
-bind-key -r K resize-pane -U 10
-bind-key -r L resize-pane -R 10
-bind-key -r M-k clear-history
-bind-key -r M-l send-keys "C-l"
-bind-key -r N run-shell 'tmux-node #{pane_current_path}'
-bind-key -r P run-shell 'tmux-psql #{pane_current_path}'
-bind-key -r S run-shell 'tmux-scratch #{pane_current_path}'
-bind-key -r T run-shell 'tmux-todo #{pane_current_path}'
-bind-key -r | split-window -h -c "#{pane_current_path}"
-bind-key C-a send-prefix
-bind-key c new-window -c "#{pane_current_path}"
-
-source-file ~/.tmux/colors/colors.conf
+source-file ~/.tmux/base.conf
+source-file ~/.tmux/status.conf
