Give tmux current window the rounded pill styling

--- a/tmux/colors/reset.conf
+++ b/tmux/colors/reset.conf
@@ -3,5 +3,6 @@ set -ug pane-border-style
 set -ug status-style
 setw -ug menu-selected-style
 setw -ug window-status-current-style
+setw -ug window-status-current-format
 setw -ug window-status-style
 setw -ug window-status-activity-style
