--- a/config/kitty/fonts/current.conf
+++ b/config/kitty/fonts/current.conf
@@ -1,5 +1,6 @@
-# from file: /home/tim/dotfiles/config/kitty/fonts/recursive-linear.conf
-font_family      family="RecMonoLinear Nerd Font"
-bold_font        auto
+# from file: /home/tim/dotfiles/config/kitty/fonts/blex.conf
+font_family      family='BlexMono Nerd Font' features=+ss03
+bold_font        family='BlexMono Nerd Font' postscript_name=BlexMonoNF-Bold features=ss03
 italic_font      auto
-bold_italic_font auto
+bold_italic_font family='BlexMono Nerd Font' postscript_name=BlexMonoNF-BoldItalic features=ss03
+font_size 10.5
