--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -116,31 +116,33 @@ device {
 
 $mainMod = SUPER
 
-bind = $mainMod ALT SHIFT, 0, movetoworkspacesilent, 10
-bind = $mainMod ALT SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod ALT SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod ALT SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod ALT SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod ALT SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod ALT SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod ALT SHIFT, 7, movetoworkspacesilent, 7
-bind = $mainMod ALT SHIFT, 8, movetoworkspacesilent, 8
-bind = $mainMod ALT SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 bind = $mainMod CTRL, C, exec, toggle-hypr-tmux qalc
 bind = $mainMod CTRL, S, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, M, movetoworkspace, special:music
+bind = $mainMod ALT SHIFT, 0, movetoworkspace, 10
+bind = $mainMod ALT SHIFT, 1, movetoworkspace, 1
+bind = $mainMod ALT SHIFT, 2, movetoworkspace, 2
+bind = $mainMod ALT SHIFT, 3, movetoworkspace, 3
+bind = $mainMod ALT SHIFT, 4, movetoworkspace, 4
+bind = $mainMod ALT SHIFT, 5, movetoworkspace, 5
+bind = $mainMod ALT SHIFT, 6, movetoworkspace, 6
+bind = $mainMod ALT SHIFT, 7, movetoworkspace, 7
+bind = $mainMod ALT SHIFT, 8, movetoworkspace, 8
+bind = $mainMod ALT SHIFT, 9, movetoworkspace, 9
+bind = $mainMod ALT SHIFT, M, movetoworkspace, special:music
+bind = $mainMod SHIFT, M, movetoworkspacesilent, special:music
 bind = $mainMod SHIFT, Q, killactive
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod ALT SHIFT, S, movetoworkspacesilent, special:magic
 bind = $mainMod SHIFT, Tab, workspace, m-1
 bind = $mainMod SHIFT, right, movetoworkspace, e+1
 bind = $mainMod, 0, workspace, 10
@@ -159,9 +161,9 @@ bind = $mainMod, E, exec, $explorer
 bind = $mainMod, F, fullscreen
 bind = $mainMod, G, exec, ghostty
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, K, exec, kitty -o shell=$SHELL -o env=TERM_PROGRAM=kitty
+bind = $mainMod, K, exec, kitty
 bind = $mainMod, L, workspace, focuscurrentorlast
-bind = $mainMod, M, togglespecialworkspace, music
+bind = $mainMod CTRL, M, togglespecialworkspace, music
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, S, togglespecialworkspace, magic
