--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -19,5 +19,5 @@ strip_trailing_spaces always
 window_padding_width 6
 
 include current-theme.conf
-include fonts/default.conf
-include fonts/current.conf
+include fonts/_default.conf
+include fonts/_current.conf
