--- a/config/kitty/fonts/pragmata.conf
+++ b/config/kitty/fonts/pragmata.conf
@@ -1,6 +1,7 @@
-font_family      family='PragmataPro Mono' features=+ss13
+font_family      family='PragmataPro Mono Liga' features=+ss13
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 12.5
-modify_font cell_height 2px
+
+font_size 15
+modify_font cell_height 120%
