--- a/config/kitty/fonts/maple.conf
+++ b/config/kitty/fonts/maple.conf
@@ -1,7 +1,7 @@
 font_family      family='Maple Mono' features="cv02=1 cv03=1"
-bold_font        family='Maple Mono' style=ExtraBold features="cv02=1 cv03=1"
+bold_font        family='Maple Mono' style=Bold features="cv02=1 cv03=1"
 italic_font      family='Maple Mono' features='cv02=1 cv03=1 cv31=1 cv35=1'
-bold_italic_font family='Maple Mono' style='ExtraBold Italic' features='cv02=1 cv03=1 cv31=1 cv35=1'
+bold_italic_font family='Maple Mono' style='Bold Italic' features='cv02=1 cv03=1 cv31=1 cv35=1'
 
 modify_font cell_height 2px
 
