--- a/config/kitty/fonts/pragmata.conf
+++ b/config/kitty/fonts/pragmata.conf
@@ -1,4 +1,4 @@
-font_family      family='PragmataPro Mono Liga' features=+ss13
+font_family      family='PragmataPro Mono Liga' postscript_name=PragmataProMonoLiga-Regular features=ss13
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
