--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -14,6 +14,7 @@ map ctrl+equal change_font_size all +1
 map ctrl+minus change_font_size all -1
 map ctrl+shift+equal change_font_size all +0.5
 map ctrl+shift+minus change_font_size all -0.5
+map shift+delete paste_selection
 shell_integration no-cursor
 strip_trailing_spaces always
 window_padding_width 6
