--- a/tmux/colors/default.conf
+++ b/tmux/colors/default.conf
@@ -2,9 +2,9 @@ set -g pane-active-border-style "fg=#32344a"
 set -g pane-border-style "fg=#32344a"
 set -g status-style "fg=default"
 setw -g menu-selected-style "fg=default"
-setw -g status-left "#[fg=#408060,bg=green] #{session_name} #[fg=green,bg=default] "
+setw -g status-left "#[fg=green,bg=default]#[fg=#408060,bg=green]#{session_name} #[fg=green,bg=default] "
 setw -g status-left-style "bright"
 setw -g window-status-activity-style "fg=default bg=default"
-setw -g window-status-current-format "#[fg=cyan]#[fg=#206080,bg=cyan]#I.#{pane_index}:#W#{?window_flags,#{window_flags}, }#[fg=cyan,bg=default]"
+setw -g window-status-current-format "#[fg=cyan]#[fg=#206080,bg=cyan]#I.#{pane_index}:#W#{?window_flags,#{window_flags}, }#[fg=cyan,bg=default]"
 setw -g window-status-current-style "bright"
 setw -g window-status-style "dim italics"
