--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -23,7 +23,7 @@ mouse-hide-while-typing = true
 resize-overlay = never
 shell-integration-features = no-cursor
 window-padding-balance = true
-window-padding-color = extend
+# window-padding-color = extend
 window-padding-x = 4
 window-padding-y = 8
 
