--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,1 +1,1 @@
-reload = , /home/tim/Pictures/wallpaper/landscape/Vista_del_Puerto_de_Victoria_desde_Sky100,_Hong_Kong,_2013-08-09,_DD_10.JPG
+reload = , /home/tim/Pictures/wallpaper/landscape/Osaka_Castle_02bs3200.jpg
