--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 monitor = , 3840x2160@240.00Hz, auto, 2.0, bitdepth, 10
 
 $browser = firefox-developer-edition
-$explorer = dolphin
+$explorer = yazi
 $menu = fuzzel
 $terminal = kitty -o shell tmux-attach-or-new
 
@@ -31,7 +31,7 @@ general {
 decoration {
   active_opacity = 1.0
   inactive_opacity = 1.0
-  rounding = 12
+  rounding = 4
   rounding_power = 3
 
   shadow {
@@ -218,6 +218,7 @@ windowrule = rounding 0, class:^(float:.*)$
 windowrule = size 30% 100%, class:^(float:.*)$
 
 windowrule = fullscreen, title:^(cool-retro-term)$
+windowrule = fullscreen, class:^(org.gnome.Loupe)$
 
 xwayland {
   force_zero_scaling = true
