--- a/config/kitty/fonts/jetbrains-classic.conf
+++ b/config/kitty/fonts/jetbrains-classic.conf
@@ -3,5 +3,7 @@ bold_font        family='JetBrainsMono Nerd Font' style=ExtraBold features='+ss1
 italic_font      family='JetBrainsMono Nerd Font' style=Italic features='+ss19 +ss01 +zero'
 bold_italic_font family='JetBrainsMono Nerd Font' style='ExtraBold Italic' features='+ss19 +ss01 +zero'
 
+modify_font cell_height 105%
+
 # feature documentation
 # https://github.com/JetBrains/JetBrainsMono/wiki/OpenType-features
