--- a/tmux/colors/reset.conf
+++ b/tmux/colors/reset.conf
@@ -1,4 +1,5 @@
 set -ug pane-active-border-style
+set -ug pane-border-lines
 set -ug pane-border-style
 set -ug status-style
 setw -ug menu-selected-style
