--- a/tmux/colors/default.conf
+++ b/tmux/colors/default.conf
@@ -1,7 +1,6 @@
-set -g pane-active-border-style "fg=#32344a,bg=black"
-set -g pane-border-lines heavy
-set -g pane-border-style "fg=#32344a,bg=black"
-set -g status-style "fg=default,bg=black"
+set -g pane-active-border-style "fg=#32344a"
+set -g pane-border-style "fg=#32344a"
+set -g status-style "fg=default,bg=default"
 setw -g menu-selected-style "fg=default"
 setw -g status-left "#[fg=green,bg=terminal]#[fg=darkgreen,bg=green]#{session_name} #[fg=green,bg=default] "
 setw -g status-left-style "bright"
