--- a/tmux/status.conf
+++ b/tmux/status.conf
@@ -1,5 +1,6 @@
 set -g status on
 set -g status-interval 1
 set -g status-left-length 30
-set -g status-right "#(tmux-git-info '#{pane_current_path}')#[fg=green,bg=default] #[fg=darkgreen,bg=green] %a %-d %b %R#[fg=green,bg=default]#[default]"
+set -g status-right "#(tmux-git-info '#{pane_current_path}')"
+#[fg=green,bg=default] #[fg=darkgreen,bg=green] %a %-d %b %R#[fg=green,bg=default]#[default]"
 set -g status-right-length 100
