--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,7 +7,7 @@ $terminal = kitty -o shell tmux-attach-or-new
 
 exec-once = systemctl --user enable --now hypridle.service
 exec-once = systemctl --user enable --now hyprpaper.service
-exec-once = hyprpaper-rand
+exec-once = wallpaper --shuffle
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --primary --type text --watch cliphist store
 
