--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,1 +1,1 @@
-reload = , /home/tim/Pictures/wallpaper/landscape/Parque_Eagle_River,_Anchorage,_Alaska,_Estados_Unidos,_2017-09-01,_DD_02.jpg
+reload = , /home/tim/Pictures/wallpaper/arch/Matsumoto_Castle05s5s4592.jpg
