Aliases wip: need to get completion working for aliased commands

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -18,6 +18,8 @@ shell_integration no-cursor
 strip_trailing_spaces always
 window_padding_width 6
 
+include default-theme.conf
 include current-theme.conf
 include fonts/_default.conf
 include fonts/_current.conf
+include jetbrains.conf
