clipboard manager also copies to primary selection

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -131,7 +131,7 @@ bind = $cmd CTRL, C, exec, toggle-hypr-tmux qalc
 bind = $cmd CTRL, F, togglespecialworkspace, browser
 bind = $cmd CTRL, M, togglespecialworkspace, music
 bind = $cmd CTRL, O, togglespecialworkspace, obs
-bind = $cmd CTRL, S, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
+bind = $cmd CTRL, S, exec, cliphist list | fuzzel --dmenu | cliphist decode | tee >(wl-copy) >(wl-copy --primary)
 bind = $cmd CTRL, Y, togglespecialworkspace, youtube
 bind = $cmd SHIFT, 0, movetoworkspacesilent, 10
 bind = $cmd SHIFT, 1, movetoworkspacesilent, 1
