flat formatting for hyprland config

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,120 +1,31 @@
-monitor = , 3840x2160@240.00Hz, auto, 1.667, bitdepth, 10
-
 $browser = firefox-developer-edition
 $explorer = yazi
 $menu = fuzzel
 $terminal = kitty -o shell tmux-attach-or-new
-
-exec-once = systemctl --user enable --now hypridle.service
-exec-once = systemctl --user enable --now hyprpaper.service
-exec-once = wallpaper --shuffle
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --primary --type text --watch cliphist store
-
-env = GTK2_RC_FILES,/usr/share/themes/Adwaita-dark/gtk-2.0/gtkrc
-env = GTK_THEME,Adwaita:dark
-env = LIBVA_DRIVER_NAME,nvidia
-env = NVD_BACKEND,direct
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
-general {
-  allow_tearing = false
-  border_size = 2
-  col.active_border = rgba(22ffffaa) rgba(66ccff88) 90deg
-  col.inactive_border = rgba(22ffffaa)
-  gaps_in = 4
-  gaps_out = 8
-  layout = master
-  resize_on_border = true
-}
-
-decoration {
-  active_opacity = 1.0
-  inactive_opacity = 1.0
-  rounding = 4
-  rounding_power = 3
-
-  shadow {
-    color = rgba(1a1a1a66)
-    enabled = true
-    range = 32
-    render_power = 3
-  }
-
-  blur {
-    enabled = true
-    passes = 2
-    size = 4
-    vibrancy = 0.1696
-  }
-}
-
-animations {
-  enabled = yes
-
-  bezier = easeOutQuint, 0.23, 1, 0.32, 1
-  bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
-  bezier = linear, 0, 0, 1, 1
-  bezier = almostLinear, 0.5, 0.5, 0.75, 1.0
-  bezier = quick, 0.15, 0, 0.1, 1
-
-  animation = border, 1, 5.39, easeOutQuint
-  animation = fade, 1, 3.03, quick
-  animation = fadeIn, 1, 1.73, almostLinear
-  animation = fadeLayersIn, 1, 1.79, almostLinear
-  animation = fadeLayersOut, 1, 1.39, almostLinear
-  animation = fadeOut, 1, 1.46, almostLinear
-  animation = global, 1, 10, default
-  animation = layers, 1, 3.81, easeOutQuint
-  animation = layersIn, 1, 4, easeOutQuint, fade
-  animation = layersOut, 1, 1.5, linear, fade
-  animation = windows, 1, 5.0, easeOutQuint
-  animation = windowsIn, 1, 4.0, easeOutQuint, popin 87%
-  animation = windowsOut, 1, 1.5, linear, popin 87%
-  animation = workspaces, 0, 1.0, almostLinear, fade
-  animation = workspacesIn, 0, 1.0, almostLinear, fade
-  animation = workspacesOut, 0, 1.0, almostLinear, fade
-}
-
-dwindle {
-  pseudotile = true # Master switch for pseudotiling. Enabling is bound to cmd + P in the keybinds section below
-  preserve_split = true # You probably want this
-}
-
-master {
-  new_status = slave
-  mfact = 0.6
-}
-
-misc {
-  force_default_wallpaper = 0
-  disable_hyprland_logo = true
-  vfr = false
-  vrr = 0
-}
-
-input {
-  accel_profile = flat
-  follow_mouse = 1
-  force_no_accel = 1
-  kb_layout = us
-  kb_options = ctrl:nocaps
-  numlock_by_default = true
-  repeat_delay = 400
-  repeat_rate = 50
-  sensitivity = 0 # -1.0 - 1.0, 0 means no Modification.
-
-  touchpad {
-    natural_scroll = false
-  }
-}
-
-device {
-  name = metadot---das-keyboard-das-keyboard
-  kb_options = ctrl:nocaps,altwin:swap_alt_win
-}
-
 $cmd = SUPER
+
+bezier = easeOutQuint, 0.23, 1, 0.35, 1
+bezier = easeInOutCubic, 0.65, 0.05, 0.35, 1
+bezier = linear, 0, 0, 1, 1
+bezier = almostLinear, 0.5, 0.5, 0.75, 1.0
+bezier = quick, 0.15, 0, 0.1, 1
+
+animation = border, 1, 5.39, easeOutQuint
+animation = fade, 1, 3.03, quick
+animation = fadeIn, 1, 1.73, almostLinear
+animation = fadeLayersIn, 1, 1.79, almostLinear
+animation = fadeLayersOut, 1, 1.39, almostLinear
+animation = fadeOut, 1, 1.46, almostLinear
+animation = global, 1, 10, default
+animation = layers, 1, 3.81, easeOutQuint
+animation = layersIn, 1, 4, easeOutQuint, fade
+animation = layersOut, 1, 1.5, linear, fade
+animation = windows, 1, 5.0, easeOutQuint
+animation = windowsIn, 1, 4.0, easeOutQuint, popin 87%
+animation = windowsOut, 1, 1.5, linear, popin 87%
+animation = workspaces, 0, 1.0, almostLinear, fade
+animation = workspacesIn, 0, 1.0, almostLinear, fade
+animation = workspacesOut, 0, 1.0, almostLinear, fade
 
 bind = $cmd ALT SHIFT, 0, movetoworkspace, 10
 bind = $cmd ALT SHIFT, 1, movetoworkspace, 1
@@ -127,7 +38,6 @@ bind = $cmd ALT SHIFT, 7, movetoworkspace, 7
 bind = $cmd ALT SHIFT, 8, movetoworkspace, 8
 bind = $cmd ALT SHIFT, 9, movetoworkspace, 9
 bind = $cmd CTRL, A, togglespecialworkspace, chat
-bind = $cmd CTRL, C, exec, toggle-hypr-tmux qalc
 bind = $cmd CTRL, F, togglespecialworkspace, browser
 bind = $cmd CTRL, M, togglespecialworkspace, music
 bind = $cmd CTRL, O, togglespecialworkspace, obs
@@ -147,7 +57,6 @@ bind = $cmd SHIFT, A, movetoworkspacesilent, special:chat
 bind = $cmd SHIFT, F, movetoworkspacesilent, special:browser
 bind = $cmd SHIFT, M, movetoworkspacesilent, special:music
 bind = $cmd SHIFT, O, movetoworkspacesilent, special:obs
-bind = $cmd SHIFT, Q, killactive
 bind = $cmd SHIFT, Tab, workspace, m-1
 bind = $cmd SHIFT, Y, movetoworkspacesilent, special:youtube
 bind = $cmd SHIFT, right, movetoworkspace, e+1
@@ -166,12 +75,14 @@ bind = $cmd, C, exec, cool-retro-term
 bind = $cmd, E, exec, $explorer
 bind = $cmd, F, fullscreen
 bind = $cmd, G, exec, ghostty
-bind = $cmd, J, togglesplit, # dwindle
+bind = $cmd, H, exec, hypr-untoggle-any-special-workspace
+bind = $cmd, J, togglesplit
 bind = $cmd, K, exec, kitty
 bind = $cmd, L, workspace, focuscurrentorlast
 bind = $cmd, L, workspace, previous
 bind = $cmd, M, exec, $browser --name music
-bind = $cmd, P, pseudo, # dwindle
+bind = $cmd, P, pseudo
+bind = $cmd, Q, killactive
 bind = $cmd, Return, exec, $terminal
 bind = $cmd, T, layoutmsg, swapwithmaster
 bind = $cmd, Tab, workspace, m+1
@@ -182,7 +93,9 @@ bind = $cmd, right, movefocus, r
 bind = $cmd, space, exec, $menu
 bind = $cmd, up, movefocus, u
 bind = , PRINT, exec, grim ~/Pictures/Screenshots/Screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
+# bind = CTRL SHIFT, C, exec, toggle-hypr-tmux qalc >>/tmp/log 2>&1
 bind = CTRL, grave, exec, monotonic-clock >> /tmp/log && toggle-quick-terminal
+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -191,45 +104,94 @@ bindel = ,XF86AudioPause, exec, playerctl play-pause
 bindel = ,XF86AudioPlay, exec, playerctl play-pause
 bindel = ,XF86AudioPrev, exec, playerctl previous
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 1%+
+
 bindm = $cmd, mouse:272, movewindow
 bindm = $cmd, mouse:273, resizewindow
 
+env = GTK2_RC_FILES,/usr/share/themes/Adwaita-dark/gtk-2.0/gtkrc
+env = GTK_THEME,Adwaita:dark
+env = LIBVA_DRIVER_NAME,nvidia
+env = NVD_BACKEND,direct
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+exec-once = systemctl --user enable --now hypridle.service
+exec-once = systemctl --user enable --now hyprpaper.service
+exec-once = wallpaper --shuffle
+exec-once = wl-paste --primary --type text --watch cliphist store
+exec-once = wl-paste --type text --watch cliphist store
+
+animations:enabled = yes
+
+decoration:active_opacity = 1.0
+decoration:blur:enabled = true
+decoration:blur:passes = 2
+decoration:blur:size = 4
+decoration:blur:vibrancy = 0.1696
+decoration:inactive_opacity = 1.0
+decoration:rounding = 4
+decoration:rounding_power = 3
+decoration:shadow:color = rgba(1a1a1a66)
+decoration:shadow:enabled = true
+decoration:shadow:range = 32
+decoration:shadow:render_power = 3
+
+device[metadot---das-keyboard-das-keyboard]:kb_options = ctrl:nocaps,altwin:swap_alt_win
+
+dwindle:preserve_split = true # 'You probably want this' TODO: what if no?
+dwindle:pseudotile = true
+
+general:allow_tearing = false
+general:border_size = 2
+general:col.active_border = rgba(22ffffaa) rgba(66ccff88) 90deg
+general:col.inactive_border = rgba(22ffffaa)
+general:gaps_in = 4
+general:gaps_out = 8
+general:layout = master
+general:resize_on_border = true
+
+input:accel_profile = flat
+input:follow_mouse = 1
+input:force_no_accel = 1
+input:kb_layout = us
+input:kb_options = ctrl:nocaps
+input:numlock_by_default = true
+input:repeat_delay = 400
+input:repeat_rate = 50
+input:sensitivity = 0
+
+master:mfact = 0.6
+master:new_status = slave
+
+misc:disable_hyprland_logo = true
+misc:force_default_wallpaper = 0
+misc:vfr = false
+misc:vrr = 0
+
+monitor = , 3840x2160@240.00Hz, auto, 1.667, bitdepth, 10
+
 submap = factorio
-bind = CTRL SHIFT, C, exec, toggle-hypr-tmux qalc >>/tmp/log 2>&1
 submap = reset
 
-windowrule = suppressevent maximize, class:.*
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 # Fix some dragging issues with XWayland
-
-windowrule = animation slideIn, class:^(quick_terminal)$
-windowrule = float, class:^(quick_terminal)$
-windowrule = noborder, class:^(quick_terminal)$
-windowrule = rounding 0, class:^(quick_terminal)$
-
-## top, full width
-windowrule = size 100% 15%, class:^(quick_terminal)$
-windowrule = move 0 0, class:^(quick_terminal)$
-
-##: RHS, full height
-#windowrule = animation slide right, class:(quick_terminal)
-#windowrule = size 20% 100%, class:^(quick_terminal)$
-#windowrule = move 100%-20% 0, class:^(quick_terminal)$
-
 windowrule = animation slide left, class:(float:qalc)
+windowrule = animation slideIn, class:^(quick_terminal)$
 windowrule = bordercolor rgb(5eb663), class:^(float:.*)$
 windowrule = float, class:^(float:.*)$
+windowrule = float, class:^(quick_terminal)$
+windowrule = fullscreen, class:^(org.gnome.Loupe)$
+windowrule = fullscreen, title:^(cool-retro-term)$
 windowrule = move 0 0, class:^(float:.*)$
+windowrule = move 0 0, class:^(quick_terminal)$
 windowrule = noblur, class:^(float:.*)$
+windowrule = noborder, class:^(quick_terminal)$
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 # Fix some dragging issues with XWayland
 windowrule = opacity 0.75, class:^(float:.*)$
 windowrule = rounding 0, class:^(float:.*)$
+windowrule = rounding 0, class:^(quick_terminal)$
+windowrule = size 100% 15%, class:^(quick_terminal)$
 windowrule = size 30% 100%, class:^(float:.*)$
-
-windowrule = fullscreen, title:^(cool-retro-term)$
-windowrule = fullscreen, class:^(org.gnome.Loupe)$
+windowrule = suppressevent maximize, class:.*
 
 workspace = special:chat, on-created-empty:firefox
 workspace = special:music, on-created-empty:firefox-developer-edition --no-remote -P music
 
-xwayland {
-  force_zero_scaling = true
-}
+xwayland:force_zero_scaling = true
