--- a/tmux/colors/default.conf
+++ b/tmux/colors/default.conf
@@ -9,5 +9,7 @@ setw -g status-left-style "bright"
 setw -g window-status-activity-style "fg=default bg=default"
 setw -g window-status-current-format "#[fg=cyan]#[fg=#206080,bg=cyan]#I.#{pane_index}:#W#{?window_flags,#{window_flags}, }#[fg=cyan,bg=default]"
 setw -g window-status-current-style "bright"
-setw -g window-status-style "dim italics"
 setw -g window-status-format "#I.#{pane_index}:#W#{?window_flags,#{window_flags}, }"
+setw -g window-status-style "dim italics"
+
+# vim:ft=tmux:
