--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 $browser = firefox-developer-edition
-$explorer = yazi
+$explorer = $terminal yazi
 $menu = fuzzel
 $terminal = kitty -o shell tmux-attach-or-new
 $cmd = SUPER
@@ -38,6 +38,7 @@ bind = $cmd ALT SHIFT, 7, movetoworkspace, 7
 bind = $cmd ALT SHIFT, 8, movetoworkspace, 8
 bind = $cmd ALT SHIFT, 9, movetoworkspace, 9
 bind = $cmd CTRL, A, togglespecialworkspace, chat
+bind = $cmd CTRL, C, exec, toggle-hypr-tmux qalc
 bind = $cmd CTRL, F, togglespecialworkspace, browser
 bind = $cmd CTRL, M, togglespecialworkspace, music
 bind = $cmd CTRL, O, togglespecialworkspace, obs
@@ -93,8 +94,7 @@ bind = $cmd, right, movefocus, r
 bind = $cmd, space, exec, $menu
 bind = $cmd, up, movefocus, u
 bind = , PRINT, exec, grim ~/Pictures/Screenshots/Screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-# bind = CTRL SHIFT, C, exec, toggle-hypr-tmux qalc >>/tmp/log 2>&1
-bind = CTRL, grave, exec, monotonic-clock >> /tmp/log && toggle-quick-terminal
+bind = CTRL, grave, exec, toggle-quick-terminal
 
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
@@ -137,15 +137,15 @@ decoration:shadow:render_power = 3
 
 device[metadot---das-keyboard-das-keyboard]:kb_options = ctrl:nocaps,altwin:swap_alt_win
 
-dwindle:preserve_split = true # 'You probably want this' TODO: what if no?
+dwindle:preserve_split = true
 dwindle:pseudotile = true
 
 general:allow_tearing = false
 general:border_size = 2
 general:col.active_border = rgba(22ffffaa) rgba(66ccff88) 90deg
-general:col.inactive_border = rgba(22ffffaa)
+general:col.inactive_border = rgba(22ffff11)
 general:gaps_in = 4
-general:gaps_out = 8
+general:gaps_out = 16
 general:layout = master
 general:resize_on_border = true
 
@@ -167,14 +167,14 @@ misc:force_default_wallpaper = 0
 misc:vfr = false
 misc:vrr = 0
 
-monitor = , 3840x2160@240.00Hz, auto, 1.667, bitdepth, 10
+monitor = , 3840x2160@240.00Hz, auto, 2, bitdepth, 10
 
 submap = factorio
 submap = reset
 
 windowrule = animation slide left, class:(float:qalc)
 windowrule = animation slideIn, class:^(quick_terminal)$
-windowrule = bordercolor rgb(5eb663), class:^(float:.*)$
+windowrule = noborder, class:^(float:.*)$
 windowrule = float, class:^(float:.*)$
 windowrule = float, class:^(quick_terminal)$
 windowrule = fullscreen, class:^(org.gnome.Loupe)$
@@ -184,7 +184,7 @@ windowrule = move 0 0, class:^(quick_terminal)$
 windowrule = noblur, class:^(float:.*)$
 windowrule = noborder, class:^(quick_terminal)$
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 # Fix some dragging issues with XWayland
-windowrule = opacity 0.75, class:^(float:.*)$
+windowrule = opacity 0.90, class:^(float:.*)$
 windowrule = rounding 0, class:^(float:.*)$
 windowrule = rounding 0, class:^(quick_terminal)$
 windowrule = size 100% 15%, class:^(quick_terminal)$
