--- a/config/kitty/fonts/jetbrains-closed.conf
+++ b/config/kitty/fonts/jetbrains-closed.conf
@@ -7,6 +7,7 @@ modify_font cell_height 105%
 modify_font cell_width 100%
 
 font_size 13
+window_padding_width 4
 
 # feature documentation
 # https://github.com/JetBrains/JetBrainsMono/wiki/OpenType-features
