--- a/tmux/colors/default.conf
+++ b/tmux/colors/default.conf
@@ -2,9 +2,12 @@ set -g pane-active-border-style "fg=#32344a"
 set -g pane-border-style "fg=#32344a"
 set -g status-style "fg=default,bg=default"
 setw -g menu-selected-style "fg=default"
+setw -g popup-border-lines rounded
+setw -g popup-border-style "fg=#32344a"
 setw -g status-left "#[fg=green,bg=terminal]#[fg=darkgreen,bg=green]#{session_name} #[fg=green,bg=default] "
 setw -g status-left-style "bright"
 setw -g window-status-activity-style "fg=default bg=default"
 setw -g window-status-current-format "#[fg=cyan]#[fg=#206080,bg=cyan]#I.#{pane_index}:#W#{?window_flags,#{window_flags}, }#[fg=cyan,bg=default]"
 setw -g window-status-current-style "bright"
 setw -g window-status-style "dim italics"
+setw -g window-status-format "#I.#{pane_index}:#W#{?window_flags,#{window_flags}, }"
