--- a/tmux/settings.conf
+++ b/tmux/settings.conf
@@ -1,4 +1,5 @@
-set -ag command-alias 'diff-keys=run-shell tmux-diff-keys'
+set -ag command-alias 'diff-keys=split-window -Z tmux-diff-keys'
+set -ag command-alias 'diff-options=split-window -Z tmux-diff-options'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m' # italics
 set -g base-index 1
 set -g focus-events on
